# tokink

./: .pre-commit-config.yaml  Makefile  README.md  example_train.py  pyproject.toml  tiktoken_example.py
.github/workflows/: python-publish.yml
examples/: htg.py  htr.py  quickstart.ipynb  train_tokenizer.py
src/tokink/: ink.py  processor.py  tokinkizer.py  utils.py
src/tokink/data/: ink_example.json
tests/: test_ink.py  test_processor.py  test_tokinkizer.py  test_utils.py
