[project]
name = "tokink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "douglasswng", email = "douglasswng@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "tokenizers>=0.22.2",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
